# sqlx-sqruff

./: Cargo.toml  LICENSE-MIT  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: diagnostic.rs  engine.rs  extract.rs  lib.rs  literal.rs  sqruff_adapter.rs
